[package]
name = "shared_memory_demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "core"
path = "src/lib.rs"

[[bin]]
name = "game_server"
path = "src/bin/game_server.rs"

[[bin]]
name = "game_monitor"
path = "src/bin/game_monitor.rs"

[dependencies]
anyhow = "1.0.98"
nix = { version = "0.30.1", features = ["mman", "fs"] }
