[package]
name = "shared_memory_demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[dependencies]
anyhow = "1.0.98"
nix = { version = "0.30.1", features = ["mman", "fs"] }
tokio = { version = "1.47.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
] }
